--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -1,7 +1,7 @@
 .search-data{
     width: 35%;
     height: 800px;
-    position: fixed;
+    position: absolute;
     background-color: rgb(209, 209, 209);
     padding-top: 290px;
     padding-left: 50px ;
@@ -10,9 +10,13 @@
 .display-data{
     height: 500px;
     display: flex;
+    position: fixed;
     flex-direction: column;
     align-items: flex-start;
-    margin-left: 700px;
+    margin-left: 47%;
+    margin-top: 10%;
+    display: block;
+    margin-right: auto
 }
 .display-data .id,.name,.size,.url,.hazard{
     color: blue;
